--- a/source/assets/stylesheets/_footer.scss
+++ b/source/assets/stylesheets/_footer.scss
@@ -14,7 +14,6 @@ footer {
     @include span-columns(2);
     @include omega();
     margin-top: $base-spacing;
-    padding: 0 $base-spacing;
   }
 
   li {
